--- a/options/train_compact_x4_otf.yml
+++ b/options/train_compact_x4_otf.yml
@@ -4,14 +4,14 @@ model_type: otf
 scale: 4
 num_gpu: auto  # set num_gpu: 0 for cpu mode
 manual_seed: 0
-l1_gt_usm: true
-percep_gt_usm: true
-gan_gt_usm: true
+#l1_gt_usm: true
+#percep_gt_usm: true
+#gan_gt_usm: true
 #high_order_degradation: true 
 
-#l1_gt_usm: false
-#percep_gt_usm: false
-#gan_gt_usm: false
+l1_gt_usm: false
+percep_gt_usm: false
+gan_gt_usm: false
 #high_order_degradation: false
 
 resize_prob: [0.2, 0.7, 0.1]  # up, down, keep
@@ -81,22 +81,22 @@ datasets:
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
-  #val:
-  #  name: Set14
-  #  type: PairedImageDataset
-  #  dataroot_gt: datasets/Set14/GTmod12
-  #  dataroot_lq: datasets/Set14/LRbicx4
-  #  io_backend:
-  #    type: disk
+  val:
+    name: Set14
+    type: PairedImageDataset
+    dataroot_gt: "/home/anon/Downloads/validation/testset_div2k_val_small/gt/"
+    dataroot_lq: "/home/anon/Downloads/validation/testset_div2k_val_small/lq/"
+    io_backend:
+      type: disk
 
 # network structures
 network_g:
   type: compact 
 
-#network_d:
-#  type: unet
-#  num_in_ch: 3
-#  num_feat: 64
+network_d:
+  type: unet
+  num_in_ch: 3
+  num_feat: 64
 
 # path
 path:
@@ -120,10 +120,10 @@ train:
 
   scheduler:
     type: MultiStepLR
-    milestones: [50000, 100000, 200000, 300000]
+    milestones: [200, 300, 400]
     gamma: 0.5
 
-  total_iter: 500
+  total_iter: 700
   warmup_iter: -1  # no warm up
 
   # losses
@@ -141,26 +141,28 @@ train:
     perceptual_weight: 1.0
     style_weight: 0
     criterion: l1
-#  gan_opt:
-#    type: GANLoss
-#    gan_type: vanilla
-#    real_label_val: 1.0
-#    fake_label_val: 0.0
-#    loss_weight: !!float 5e-3
+  gan_opt:
+    type: GANLoss
+    gan_type: vanilla
+    real_label_val: 1.0
+    fake_label_val: 0.0
+    loss_weight: !!float 5e-3
 
   net_d_iters: 1
   net_d_init_iters: 0
 
-# validation settings
-#val:
-#  val_freq: !!float 5e3
-#  save_img: true
+val:
+  val_freq: 500
+  save_img: true
 
-#  metrics:
-#    psnr: # metric name, can be arbitrary
-#      type: calculate_psnr
-#      crop_border: 4
-#      test_y_channel: false
+  metrics:
+    psnr: # metric name, can be arbitrary
+      type: calculate_psnr
+      crop_border: 4
+      test_y_channel: false
+    ssim:
+      type: calculate_ssim
+      crop_border: 4
 
 # logging settings
 logger:
