lint and poetry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,3 @@
-name = "neosr"
-repository = "https://github.com/muslll/neosr"
-
 [tool.poetry]
 name = "neosr"
 version = "0.1.0"
@@ -9,9 +6,23 @@ authors = ["musl <132400428+muslll@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11,<3.12"
 opencv-python = "^4.8.0.74"
+numpy = "^1.25.2"
+torch = ">=2.0.0, !=2.0.1"
 
+[tool.poetry.group.dev.dependencies]
+scipy = "^1.11.1"
+PyYAML = "^6.0.1"
+torchvision = ">=0.15.0, <0.15.2"
+tb-nightly = "^2.14.0a20230802"
+tqdm = "^4.65.0"
+
+[tool.ruff]
+select = ["E", "F", "B", "NPY"]
+fixable = ["ALL"]
+ignore = ["E501"]
+target-version = "py311"
 
 [build-system]
 requires = ["poetry-core"]
