--- a/options/train_compact_x4.yml
+++ b/options/train_compact_x4.yml
@@ -2,8 +2,8 @@
 name: testing
 model_type: default
 scale: 4
-num_gpu: auto  # set num_gpu: 0 for cpu mode
-manual_seed: 0
+num_gpu: 1  # set num_gpu: 0 for cpu mode
+#manual_seed: 0
 
 # dataset and data loader settings
 datasets:
@@ -28,7 +28,7 @@ datasets:
 
     # data loader
     num_worker_per_gpu: 4
-    batch_size_per_gpu: 1
+    batch_size_per_gpu: 2
     dataset_enlarge_ratio: 1
 
   val:
@@ -56,11 +56,11 @@ network_d:
 
 # path
 path:
-  #pretrain_network_g: /tmp/net_g_latest.pth
+  #pretrain_network_g: /tmp/net_g_500.pth
   #Needed only for old pretrains. All models now save to param instead of params_ema
   #param_key_g: params_ema
-  resume_state: ~
-  #resume_state: /home/anon/code/experiments/testing/training_states/500.state
+  #resume_state: ~
+  resume_state: /home/anon/code/neosr/experiments/testing/training_states/500.state
 
 # training settings
 train:
@@ -106,7 +106,7 @@ train:
     fake_label_val: 0.0
     loss_weight: !!float 5e-3
 
-      #  net_d_iters: 1
+      #net_d_iters: 1
       #net_d_init_iters: 0
 
 # validation settings
