--- a/options/test.yml
+++ b/options/test.yml
@@ -8,7 +8,8 @@ datasets:
   test_1:  # the 1st test dataset
     name: Set5
     type: single
-    dataroot_lq: /home/anon/Downloads/validation/testset_div2k_val_small/lq/
+    #dataroot_lq: /home/anon/Downloads/validation/testset_div2k_val_small/lq/
+    dataroot_lq: /tmp/test/
     io_backend:
       type: disk
 
@@ -25,7 +26,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: /tmp/4x_rybu.pth
+  pretrain_network_g: /tmp/net_g_30000.pth
   #param_key_g: params_ema
   strict_load_g: true
 
