temp fix for otf dataloader

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,13 @@ readme = "README.md"
 python = "^3.11,<3.12"
 opencv-python = "^4.8.0.74"
 numpy = "^1.25.2"
+torch = ">=2.0.0, !=2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 scipy = "^1.11.1"
 PyYAML = "^6.0.1"
 tb-nightly = "^2.14.0a20230802"
+torchvision = ">=0.15.0, <0.15.2"
 tqdm = "^4.65.0"
 
 [tool.ruff]
