minor fix from previous

--- a/options/train_esrgan_otf.yml
+++ b/options/train_esrgan_otf.yml
@@ -8,7 +8,7 @@ bfloat16: false
 compile: false
 #manual_seed: 0
 
-gt_size: 96
+gt_size: 128
 queue_size: 180
 
 datasets:
@@ -125,7 +125,12 @@ train:
   perceptual_opt:
     type: PerceptualLoss
     layer_weights:
-      "conv5_4": 1 # before relu
+      # before relu
+      "conv1_2": 0.1
+      "conv2_2": 0.1
+      "conv3_4": 1
+      "conv4_4": 1
+      'conv5_4': 1
     vgg_type: vgg19
     use_input_norm: true
     range_norm: false
