Add OmniSR support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ opencv-python = "^4.8.0.74"
 numpy = "^1.25.2"
 torch = ">=2.0.0, !=2.0.1"
 lmdb = "^1.4.1"
+einops = "^0.6.1"
 
 [tool.poetry.group.dev.dependencies]
 scipy = "^1.11.1"
