--- a/options/train_omnisr.yml
+++ b/options/train_omnisr.yml
@@ -61,13 +61,13 @@ train:
     lr: !!float 1e-4
     weight_decay: 0
     betas: [0.9, 0.99]
-    fused: True
+    fused: true
   optim_d:
     type: adamw
     lr: !!float 1e-4
     weight_decay: 0
     betas: [0.9, 0.99]
-    fused: True
+    fused: true
 
   scheduler:
     type: multisteplr
