--- a/options/train_swinir_otf.yml
+++ b/options/train_swinir_otf.yml
@@ -19,7 +19,7 @@ datasets:
     io_backend:
       type: disk
 
-    batch_size_per_gpu: 6
+    batch_size: 6
     use_hflip: true
     use_rot: true
     num_worker_per_gpu: 4
@@ -151,6 +151,9 @@ train:
   #  type: L1Loss
   #  loss_weight: 1.0
   #  reduction: mean
+  #ff_opt:
+  #  type: focalfrequencyloss
+  #  loss_weight: 1.0
 
   #net_d_iters: 1
   #net_d_init_iters: 0
