--- a/options/test_compact.yml
+++ b/options/test_compact.yml
@@ -9,7 +9,7 @@ datasets:
   test_1:  
     name: val_1
     type: single
-    dataroot_lq: "datasets/val/"
+    dataroot_lq: 'datasets/val/'
     io_backend:
       type: disk
 
@@ -20,7 +20,7 @@ network_g:
 #  num_conv: 16
 
 path:
-  pretrain_network_g: "model.pth"
+  pretrain_network_g: 'model.pth'
   #param_key_g: params_ema
 
 val:
