--- a/options/train_realesrgan.yml
+++ b/options/train_realesrgan.yml
@@ -11,9 +11,9 @@ compile: false
 datasets:
   train:
     type: paired
-    dataroot_gt: "datasets/nomos_uni/gt/"
-    dataroot_lq: "datasets/nomos_uni/lq/"
-    #meta_info: "datasets/nomos_uni/meta_info.txt"
+    dataroot_gt: 'datasets/nomos_uni/gt/'
+    dataroot_lq: 'datasets/nomos_uni/lq/'
+    #meta_info: 'datasets/nomos_uni/meta_info.txt'
     io_backend:
       type: disk
 
@@ -27,8 +27,8 @@ datasets:
 #  val:
 #    name: val_1
 #    type: paired 
-#    dataroot_gt: "datasets/val/gt/"
-#    dataroot_lq: "datasets/val/lq/"
+#    dataroot_gt: 'datasets/val/gt/'
+#    dataroot_lq: 'datasets/val/lq/'
 #    io_backend:
 #      type: disk
 #val:
@@ -43,7 +43,7 @@ datasets:
 #      crop_border: 4
 
 path:
-  #pretrain_network_g: "experiments/pretrain.pth"
+  #pretrain_network_g: 'experiments/pretrain.pth'
   #param_key_g: params_ema
   resume_state: ~
 
