--- a/options/train_ditn.yml
+++ b/options/train_ditn.yml
@@ -1,6 +1,6 @@
 
-name: train_srformer_otf
-model_type: otf
+name: train_dat
+model_type: default
 scale: 4
 num_gpu: 1
 use_amp: true
@@ -8,17 +8,16 @@ bfloat16: false
 compile: false
 #manual_seed: 1024
 
-gt_size: 128
-queue_size: 180
-
 datasets:
   train:
-    type: otf
+    type: paired
     dataroot_gt: 'datasets/gt/'
+    dataroot_lq: 'datasets/lq/'
     #meta_info: 'datasets/meta_info.txt'
     io_backend:
       type: disk
 
+    gt_size: 128
     batch_size: 6
     use_hflip: true
     use_rot: true
@@ -27,48 +26,11 @@ datasets:
 
 #  val:
 #    name: val_1
-#    type: paired
+#    type: paired 
 #    dataroot_gt: 'datasets/val/gt/'
 #    dataroot_lq: 'datasets/val/lq/'
 #    io_backend:
 #      type: disk
-
-    blur_kernel_size: 21
-    kernel_list: ["iso", "aniso", "generalized_iso", "generalized_aniso", "plateau_iso", "plateau_aniso"]
-    kernel_prob: [0.45, 0.25, 0.12, 0.03, 0.12, 0.03]
-    sinc_prob: 0.1
-    blur_sigma: [0.2, 3]
-    betag_range: [0.5, 4]
-    betap_range: [1, 2]
-
-    blur_kernel_size2: 17
-    kernel_list2: ["iso", "aniso", "generalized_iso", "generalized_aniso", "plateau_iso", "plateau_aniso"]
-    kernel_prob2: [0.45, 0.25, 0.12, 0.03, 0.12, 0.03]
-    sinc_prob2: 0.1
-    blur_sigma2: [0.2, 1.5]
-    betag_range2: [0.5, 4]
-    betap_range2: [1, 2]
-
-    final_sinc_prob: 0.8
-
-resize_prob: [0.2, 0.7, 0.1] # up, down, keep
-resize_range: [0.15, 1.5]
-gaussian_noise_prob: 0.2
-noise_range: [1, 20]
-poisson_scale_range: [0.05, 3]
-gray_noise_prob: 0.2
-jpeg_range: [70, 95]
-
-# the second degradation process
-second_blur_prob: 0.8
-resize_prob2: [0.3, 0.4, 0.3] # up, down, keep
-resize_range2: [0.3, 1.2]
-gaussian_noise_prob2: 0.2
-noise_range2: [1, 15]
-poisson_scale_range2: [0.05, 2.5]
-gray_noise_prob2: 0.2
-jpeg_range2: [60, 95]
-
 #val:
 #  val_freq: 1000
 #  save_img: true
@@ -87,9 +49,9 @@ path:
   resume_state: ~
 
 network_g:
-  type: srformer_light
-  #type: srformer_medium
+  type: ditn
   #upscale: 2
+  #patch_size: 16
 
 network_d:
   type: unet
@@ -102,13 +64,11 @@ train:
     lr: !!float 1e-4
     weight_decay: 0
     betas: [0.9, 0.99]
-    fused: true
   optim_d:
     type: adamw
     lr: !!float 1e-4
     weight_decay: 0
     betas: [0.9, 0.99]
-    fused: true
 
   scheduler:
     type: multisteplr
@@ -116,7 +76,7 @@ train:
     gamma: 0.5
 
   total_iter: 500000
-  warmup_iter: -1 # no warm up
+  warmup_iter: -1  # no warm up
   #ema_decay: 0.999
 
   # losses
