--- a/options/test_omnisr.yml
+++ b/options/test_omnisr.yml
@@ -1,5 +1,5 @@
 # Results will be saved to neosr/experiments/results/
-name: test_compact
+name: test_omnisr
 model_type: default
 scale: 4
 num_gpu: 1
