fix hat config templates

--- a/options/train_hat.yml
+++ b/options/train_hat.yml
@@ -1,5 +1,5 @@
 
-name: train_dat
+name: train_hat
 model_type: default
 scale: 4
 num_gpu: 1
@@ -65,13 +65,11 @@ train:
     lr: !!float 1e-4
     weight_decay: 0
     betas: [0.9, 0.99]
-    fused: true
   optim_d:
     type: adamw
     lr: !!float 1e-4
     weight_decay: 0
     betas: [0.9, 0.99]
-    fused: true
 
   scheduler:
     type: multisteplr
