--- a/options/train_swinir_otf.yml
+++ b/options/train_swinir_otf.yml
@@ -159,7 +159,7 @@ train:
 logger:
   print_freq: 100
   save_checkpoint_freq: 1000
-  use_tb_logger: false
+  use_tb_logger: true
   #wandb:
   #  project: ~
   #  resume_id: ~
