--- a/options/train_omnisr_otf.yml
+++ b/options/train_omnisr_otf.yml
@@ -82,7 +82,7 @@ jpeg_range2: [60, 95]
 
 path:
   #pretrain_network_g: 'experiments/pretrain.pth'
-  #param_key_g: params_ema
+  #param_key_g: ~
   #strict_load_g: false
   resume_state: ~
 
