--- a/options/train_swinir.yml
+++ b/options/train_swinir.yml
@@ -44,7 +44,7 @@ datasets:
 
 path:
   #pretrain_network_g: 'experiments/pretrain.pth'
-  #param_key_g: params_ema
+  #param_key_g: ~
   #strict_load_g: false
   resume_state: ~
 
