--- a/options/train_omnisr_otf.yml
+++ b/options/train_omnisr_otf.yml
@@ -3,7 +3,7 @@ name: train_omnisr_otf
 model_type: otf
 scale: 4
 num_gpu: 1
-use_amp: true
+use_amp: false
 bfloat16: false
 compile: false
 #manual_seed: 1024
