update test options

--- a/options/test_mdbn.yml
+++ b/options/test_mdbn.yml
@@ -1,5 +1,5 @@
 # Results will be saved to neosr/experiments/results/
-name: test_realesrgan
+name: test_mdbn
 model_type: default
 scale: 4
 num_gpu: 1
@@ -14,7 +14,7 @@ datasets:
       type: disk
 
 network_g:
-  type: esrgan 
+  type: mdbn
 
 path:
   pretrain_network_g: 'model.pth'
