--- a/options/train_dctlsa_otf.yml
+++ b/options/train_dctlsa_otf.yml
@@ -1,6 +1,6 @@
 
-name: train_compact
-model_type: default
+name: train_dctlsa_otf
+model_type: otf
 scale: 4
 num_gpu: 1
 use_amp: false
@@ -8,29 +8,49 @@ bfloat16: false
 compile: false
 #manual_seed: 1024
 
+gt_size: 128
+queue_size: 180
+
 datasets:
   train:
-    type: paired
+    type: otf
     dataroot_gt: 'datasets/gt/'
-    dataroot_lq: 'datasets/lq/'
     #meta_info: 'datasets/meta_info.txt'
     io_backend:
       type: disk
 
-    gt_size: 128
     batch_size: 6
     use_hflip: true
     use_rot: true
     num_worker_per_gpu: 4
     dataset_enlarge_ratio: 5
 
+    blur_kernel_size: 7
+    kernel_list: ["iso", "aniso", "generalized_iso", "generalized_aniso", "plateau_iso", "plateau_aniso"]
+    kernel_prob: [0.45, 0.25, 0.12, 0.03, 0.12, 0.03]
+    sinc_prob: 0.1
+    blur_sigma: [0.2, 3]
+    betag_range: [0.5, 4]
+    betap_range: [1, 2]
+
+    blur_kernel_size2: 9
+    kernel_list2: ["iso", "aniso", "generalized_iso", "generalized_aniso", "plateau_iso", "plateau_aniso"]
+    kernel_prob2: [0.45, 0.25, 0.12, 0.03, 0.12, 0.03]
+    sinc_prob2: 0.1
+    blur_sigma2: [0.2, 1.5]
+    betag_range2: [0.5, 4]
+    betap_range2: [1, 2]
+
+    final_sinc_prob: 0.8
+
 #  val:
 #    name: val_1
-#    type: paired 
+#    type: paired
 #    dataroot_gt: 'datasets/val/gt/'
 #    dataroot_lq: 'datasets/val/lq/'
 #    io_backend:
 #      type: disk
+
 #val:
 #  val_freq: 1000
 #  save_img: true
@@ -42,6 +62,24 @@ datasets:
 #      type: calculate_ssim
 #      crop_border: 4
 
+resize_prob: [0.3, 0.4, 0.3] # up, down, keep
+resize_range: [0.5, 1.5]
+gaussian_noise_prob: 0.2
+noise_range: [0, 4]
+poisson_scale_range: [0.05, 0.5]
+gray_noise_prob: 0.1
+jpeg_range: [70, 95]
+
+# the second degradation process
+second_blur_prob: 0.8
+resize_prob2: [0.3, 0.4, 0.3] # up, down, keep
+resize_range2: [0.3, 1.5]
+gaussian_noise_prob2: 0.2
+noise_range2: [0, 4]
+poisson_scale_range2: [0.05, 0.25]
+gray_noise_prob2: 0.1
+jpeg_range2: [60, 95]
+
 path:
   #pretrain_network_g: 'experiments/pretrain.pth'
   #param_key_g: ~
@@ -49,7 +87,7 @@ path:
   resume_state: ~
 
 network_g:
-  type: compact 
+  type: dctlsa 
 
 network_d:
   type: unet
@@ -57,12 +95,12 @@ network_d:
 train:
   optim_g:
     type: adamw
-    lr: !!float 1e-4
+    lr: !!float 5e-4
     weight_decay: 0
     betas: [0.9, 0.99]
   optim_d:
     type: adamw
-    lr: !!float 1e-4
+    lr: !!float 5e-4
     weight_decay: 0
     betas: [0.9, 0.99]
 
@@ -72,7 +110,7 @@ train:
     gamma: 0.5
 
   total_iter: 500000
-  warmup_iter: -1  # no warm up
+  warmup_iter: -1 # no warm up
 
   # losses
   pixel_opt:
