Remove dat_light preset

--- a/options/train_dat_otf.yml
+++ b/options/train_dat_otf.yml
@@ -87,8 +87,7 @@ path:
   resume_state: ~
 
 network_g:
-  type: dat_light
-  #type: dat_small
+  type: dat_small
   #type: dat_medium
   #type: dat_2
 
