--- a/options/test_dat.yml
+++ b/options/test_dat.yml
@@ -15,8 +15,7 @@ datasets:
       type: disk
 
 network_g:
-  type: dat_light
-  #type: dat_small
+  type: dat_small
   #type: dat_medium
   #type: dat_2
 
